<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Spartan 5</string>
    <string name="btnBuscar">Buscar evento</string>
    <string name="lblPerfil">Perfil</string>
    <string name="lblCheck">Check in</string>
    <string name="cmdBuscar">Buscar</string>
    <string name="cmdInvitar">Invitar amigos</string>
    <string name="cmdCrear">Crear</string>
    <string name="cmdCheckIn">Check in</string>
    <string name="btnCrear">Crear evento</string>
    <string name="btnCheckIn">Check in</string>
    <string name="btnParametros">Parametros</string>
    <string name="btnPopulares">Eventos populares</string>
    <string name="txtDeporte">Seleccionar deporte o actividad</string>
    <string name="lblTituloActividad">Título del evento</string>
    <string name="lblLugarEvento">Lugar</string>
    <string name="txtFecha">Seleccionar fecha</string>
    <string name="lblUbicacion">Ubicación</string>
    <string name="cmdNoDeporte">Mostrar resultados para cualquier deporte</string>
    <string name="cmdUbicacion">Utilizar ubicación actual</string>
    <string name="cmdEnviarMensaje">Enviar mensaje con invitación</string>
    <string name="txtOferta">Incluir oferta publica</string>
    <string name="txtResultados">Resultados de busqueda</string>
    <string name="txtConfirmarEvento">Confirmación de evento</string>
    <string name="txtDetalleEvento">Detalle del evento</string>
    <string name="txtDetalleAsistencia">Detalle de la asistencia</string>
    <string name="lblFutbol">Fútbol</string>
    <string name="lblBasket">Baloncesto</string>
    <string name="lblVoley">Voleybol</string>
    <string name="lblTennis">Tenis</string>
    <string name="lblStatus">Status</string>
    <string name="lblEncuentros">Encuentros:</string>
    <string name="txtAmigos">Invitar amigos</string>
    <string name="lblDatosEvento">Datos del evento</string>
    <string name="lblInvitados">Invitado al evento</string>
    <string name="cmdAgregarInvitados">Invitar amigo</string>
    <string name="cmdConfirmar">Terminar confirmación</string>
    <string name="cmdAsistir">Asistir</string>
    <string name="cmdCancelar">Cancelar asistencia</string>
    <string name="cmdYaAsisti">Check in</string>
    <string name="cmdNoFecha">Buscar eventos para cualquier fecha</string>
    <string name="cmdNewUser">Registrarme</string>
    <string name="cmdGoToNewUser">Registrarme</string>
    <string name="cmdNoRegistration">Seguir sin registrarme</string>
    <string name="title_activity_registrar_usuario">RegistrarUsuarioActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_log_in">LogInActivity</string>
    <string name="title_activity_buscar_usuarios_afin">BuscarUsuariosAFin</string>
    <string name="title_activity_buscar_equipos">BuscarEquiposActivity</string>
    <string name="cmdIngresar">Ingresar</string>
    <string name="title_activity_main_opciones">MainOpciones</string>
    <string name="cmdVerEventos">ver Eventos</string>
    <string name="cmdVerEquipos">Ver Equipos</string>
    <string name="cmdVerTorneos">Ver Torneos</string>
    <string name="cmdMiPerfil">Mi Perfil</string>
    <string name="cmdPerfectTeam">Perfect Team</string>
    <string name="cmdVerAsistencias">Asistencias</string>
    <string name="cmdSettings">Settings</string>
    <string name="cmdLogout">Logout</string>
    <string name="title_activity_main_opciones_sin_ingreso">Spartan 5</string>
    <string name="cmdVerEventosSinIngresar">Eventos</string>
    <string name="cmdVerEquiposSinIngresar">Equipos</string>
    <string name="cmdVerTorneosSinIngresar">Torneos</string>
    <string name="title_activity_cambiar_contrasena">Cambio de contraseña</string>
    <string name="cmdChangeePwd">Cambiar Contraseña</string>

</resources>
