<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splashScreenBackground"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imgDeporte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ball_basket" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/txtBarBackground"
        android:text="@string/lblDatosEvento"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/lblTituloEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Titulo evento"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/lblLugarEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Lugar"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/lblHoraFechaEvento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="Fecha y hora"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/txtBarBackground"
        android:text="@string/lblInvitados"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white" />

    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
	    android:background="@color/btnBackground"
	    android:layout_weight="1" >

        <ListView
            android:id="@+id/listaConfirmarInvitado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >
        </ListView>

    </LinearLayout>
    

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/cmdAgregarInvitados"
            android:onClick="seleccionarContacto" />
        
        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/cmdEnviarMensaje"
            android:onClick="enviarMensajeCrear" />

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cmdConfirmar"
            android:textColor="@color/white"
            android:onClick="terminarConfirmacion" />

    </LinearLayout>
  

</LinearLayout>