<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/splashScreenBackground">

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/badge_sample" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblStatus"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium" 
        android:textColor="@color/white"/>

    <RatingBar
            android:id="@+id/estadisticasPerfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:isIndicator="true"
			android:focusable="false"
			android:clickable="false"
            android:numStars="5"
            android:rating="4.0"
            android:stepSize="1.0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ball_soccer" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent" 
    			android:layout_height="match_parent"
    			android:layout_centerInParent="true"
                android:text="@string/lblFutbol"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:layout_weight="1"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent" 
    			android:layout_height="match_parent"
    			android:layout_centerInParent="true"
                android:text="@string/lblEncuentros"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:layout_weight="1"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>
    
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ball_basket" />

			<LinearLayout
            	android:layout_width="match_parent"
            	android:layout_height="match_parent"
            	android:orientation="vertical" >

            	<TextView
                	android:id="@+id/textView3"
                	android:layout_width="match_parent" 
    				android:layout_height="match_parent"
    				android:layout_centerInParent="true"
                	android:text="@string/lblBasket"
                	android:textAppearance="?android:attr/textAppearanceLarge" 
                	android:layout_weight="1"
                	android:textColor="@color/white"/>

           	 	<TextView
                	android:id="@+id/textView4"
                	android:layout_width="match_parent" 
    				android:layout_height="match_parent"
    				android:layout_centerInParent="true"
                	android:text="@string/lblEncuentros"
                	android:textAppearance="?android:attr/textAppearanceMedium" 
                	android:layout_weight="1"
                	android:textColor="@color/white"/>
        		</LinearLayout>
    		</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ball_volei" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent" 
    			android:layout_height="match_parent"
    			android:layout_centerInParent="true"
                android:text="@string/lblVoley"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:layout_weight="1"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent" 
    			android:layout_height="match_parent"
    			android:layout_centerInParent="true"
                android:text="@string/lblEncuentros"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:layout_weight="1"
                android:textColor="@color/white"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ball_tennis" />

		<LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent" 
    			android:layout_height="match_parent"
    			android:layout_centerInParent="true"
                android:text="@string/lblTennis"
                android:textAppearance="?android:attr/textAppearanceLarge" 
                android:layout_weight="1"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent" 
    			android:layout_height="match_parent"
    			android:layout_centerInParent="true"
                android:text="@string/lblEncuentros"
                android:textAppearance="?android:attr/textAppearanceMedium" 
                android:layout_weight="1"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
    

</LinearLayout>
