<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/splashScreenBackground"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical" >

    <!-- Estadisticas del juegador -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_weight="0.04"
        android:orientation="vertical" >

        <!-- Ranking -->

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:background="@color/splashScreenBackground"
            android:onClick="verPerfil"
            android:scaleType="fitCenter"
            android:src="@drawable/spartan_icon" />

        <!-- Puntaje del juegador -->
    </LinearLayout>
    
	<!-- Informacion encuentros previos -->

	<!-- Comandos de la vista -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_weight="0.43">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Usuario:"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/newUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName" >

                <requestFocus />
            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="Contraseña:"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/newUserPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword" />

        </LinearLayout>

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="0.43"
            android:text="@string/cmdIngresar"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="62dp"
                android:layout_marginRight="62dp"
                android:text="¿No tienes una cuenta?"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.04"
        android:orientation="vertical" >

        <Button
            android:id="@+id/button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/cmdGoToNewUser"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/cmdNoRegistration"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>